# dotfiles

./: .editorconfig  .gitignore  Brewfile  README.md  bootstrap.sh  com.DanPristupov.Fork.plist  setup.sh
amphetamine/: Amphetamine.plist
betterdisplay/: BetterDisplay.plist
claude/: CLAUDE.md
claude/commands/: audit.md  check-dep.md  debug.md  recall.md  sanitise-config.md  scan-secrets.md
claude/docs/: shell-reference.md
git/: .gitconfig  .gitignore_global  .gitmessage
iterm2/: Default.json
macos/: defaults.sh
rag/: config.yaml.template  pyproject.toml  requirements.txt
rag/launchd/: com.dotfiles.rag-indexer.plist  com.dotfiles.rag-watcher.plist  com.warrendeleon.rag-indexer.plist  com.warrendeleon.rag-watcher.plist
rag/scripts/: bulk_index.py  health_check.py
rag/src/: audit.py  indexer.py  queue_db.py  server.py  store.py  summariser.py  watcher.py
rag/src/parsers/: __init__.py  code.py  config.py  jsonl.py  markdown.py
scripts/: com.dotfiles.weekly-cleanup.plist  weekly-cleanup.sh
shell/: .p10k.zsh  .secrets.env.template  .zprofile  .zshrc
singlebox/: Settings
ssh/: config
vscode/: extensions.txt  settings.json
webstorm/: Raycast Compatible.xml  console-font.xml  editor-font.xml
